--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,8 +1,12 @@
+import = [
+    "~/.config/alacritty/themes/themes/gruvbox_dark.toml"
+]
+
 [shell]
 program = "/bin/zsh"
 
 [window]
-opacity = 0.9
+opacity = 0.85
 padding = { x = 10, y = 10 }
 decorations = "None"
 
