--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -6,8 +6,9 @@ import = [
 program = "/bin/zsh"
 
 [window]
-opacity = 0.85
+opacity = 0.9
 padding = { x = 10, y = 10 }
 decorations = "None"
 
 [font]
+normal = { family = "JetBrainsMono Nerd Font" }
