--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,35 +1,20 @@
-# Default config for sway
-#
-# Copy this to ~/.config/sway/config and edit it to your liking.
-#
-# Read `man 5 sway` for a complete reference.
-
 font pango: "JetBrainsMono Nerd Font" Normal 10
-
-### Variables
 
 # Logo key. Use Mod1 for Alt.
 set $mod Mod4
-
 set $left h
 set $down j
 set $up k
 set $right l
-
 set $term alacritty
 
-# Your preferred application launcher
-# Note: pass the final command to swaymsg so that the resulting window can be opened
-# on the original workspace that the command was run on.
 set $menu wofi --show drun
 # set $menu dmenu_path | wmenu | xargs swaymsg exec --
 
 include /etc/sway/config-vars.d/*
 
 ### Output configuration
-#
-# Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+output * bg /home/wasabi/Pictures/kanagawa.jpg fill
 #
 # Example configuration:
 #
@@ -51,23 +36,24 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 # resumed. It will also lock your screen before your computer goes to sleep.
 
 ### Input configuration
-#
-# Example configuration:
-#
-#   input "2:14:SynPS/2_Synaptics_TouchPad" {
-#       dwt enabled
-#       tap enabled
-#       natural_scroll enabled
-#       middle_emulation enabled
-#   }
-#
+
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
+
+    input "1267:12448:ELAN0708:00_04F3:30A0_Touchpad" {
+        dwt enabled
+        tap enabled
+        natural_scroll enabled
+    }
 
 ### Key bindings
 
     bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
     bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
+
+    bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+    bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
+    bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
 
     # Start a terminal
     bindsym $mod+Return exec $term
