--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,6 +1,8 @@
 import = [
     # "~/.config/alacritty/themes/themes/gruvbox_dark.toml"
-    "~/.config/alacritty/themes/themes/kanagawa_wave.toml"
+    # "~/.config/alacritty/themes/themes/kanagawa_wave.toml"
+    # "~/.config/alacritty/themes/themes/hyper.toml"
+    "~/.config/alacritty/themes/themes/rose-pine.toml"
 ]
 
 [shell]
@@ -9,7 +11,7 @@ program = "/bin/zsh"
 [window]
 opacity = 0.98
 padding = { x = 5, y = 5 }
-# decorations = "None"
+decorations = "None"
 
 [font]
 size = 10
