--- a/.config/sway/config
+++ b/.config/sway/config
@@ -17,13 +17,14 @@ set $menu wofi --show drun
 include /etc/sway/config-vars.d/*
 
 ### Output configuration
+# You can get the names of your outputs by running: swaymsg -t get_outputs
 output * bg /home/wasabi/Pictures/kanagawa.jpg fill
+output HDMI-A-1 mode 2560x1440@100hz
 #
 # Example configuration:
 #
 #   output HDMI-A-1 resolution 1920x1080 position 1920,0
 #
-# You can get the names of your outputs by running: swaymsg -t get_outputs
 
 ### Idle configuration
 #
