--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -2,7 +2,11 @@ import = [
     # "~/.config/alacritty/themes/themes/gruvbox_dark.toml"
     # "~/.config/alacritty/themes/themes/kanagawa_wave.toml"
     # "~/.config/alacritty/themes/themes/hyper.toml"
-    "~/.config/alacritty/themes/themes/rose-pine.toml"
+    # "~/.config/alacritty/themes/themes/rose-pine.toml"
+    "~/.config/alacritty/themes/themes/solarized_light.toml"
+    # "~/.config/alacritty/themes/themes/solarized_dark.toml"
+    # "~/.config/alacritty/themes/themes/solarized_osaka.toml"
+    # "~/.config/alacritty/themes/themes/seashells.toml"
 ]
 
 [shell]
@@ -11,12 +15,12 @@ program = "/bin/zsh"
 [window]
 opacity = 0.98
 padding = { x = 5, y = 5 }
-decorations = "None"
+# decorations = "None"
 
 [font]
 size = 10
-normal = { family = "JetBrainsMono Nerd Font" }
-# normal = { family = "MesloLGLDZ Nerd Font" }
+# normal = { family = "JetBrainsMono Nerd Font" }
+normal = { family = "MesloLGL Nerd Font" }
 # normal = { family = "Ubuntu Mono" }
 
 [keyboard]
