--- a/.config/sway/config
+++ b/.config/sway/config
@@ -18,7 +18,7 @@ include /etc/sway/config-vars.d/*
 
 ### Output configuration
 # You can get the names of your outputs by running: swaymsg -t get_outputs
-output * bg /home/wasabi/Pictures/kanagawa.jpg fill
+output * bg /home/wasabi/Pictures/solarized-dark.png fill
 output HDMI-A-1 mode 2560x1440@100hz
 #
 # Example configuration:
