--- a/.config/i3/config
+++ b/.config/i3/config
@@ -18,14 +18,22 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+# exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
+# Xautolock
+exec --no-startup-id xautolock -time 1 -detectsleep -locker "i3lock-fancy"
+
+# Picom
+exec --no-startup-id picom
+
 # wallpaper
-exec "feh --bg-fill /home/wasabi/Pictures/solarized-dark.png"
+# exec "feh --bg-fill /home/wasabi/Pictures/solarized-dark.png"
+# exec "feh --bg-fill /home/wasabi/Pictures/sousou-no-frieren-1.jpg"
+exec "feh --bg-fill /home/wasabi/Pictures/sousou-no-frieren-2.jpg"
 
 # brightness
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
