i3status: battery section

--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -33,7 +33,7 @@ ethernet _first_ {
 }
 
 battery all {
-    format = "BAT: %status %percentage %remaining"
+    format = "%status: %percentage %remaining"
         format_down = "No battery"
         status_chr = "CHR"
         status_bat = "BAT"
