--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,21 +1,54 @@
 backend = "glx";
 vsync = true;
-# glx-use-copysubbuffer-mesa = true;
-
-# glx-copy-from-front = true;
+glx-copy-from-front = false;
+glx-use-copysubbuffer-mesa = true;
 # glx-swap-method = 2;
 # xrender-sync = true;
 # xrender-sync-fence = true;
+detect-client-opacity = true;
 
-opacity-rule = [
-    "90:class_g = 'Alacritty'",
-    "90:class_g = 'code'"
+#################################
+# Rounded corners
+#################################
+corner-radius = 8;
+rounded-corners-exclude = [
+  # "class_g = 'Google-chrome'",
+  # "class_g = 'brave'"
+  "class_g = 'i3bar'"
 ];
 
-blur:
-{
-    method = "gaussian";
-    # size = 25; 
-    # strength = 20;
-    # deviation = 15;
-};
+#################################
+# Shadows
+#################################
+shadow = true;
+shadow-radius = 20;
+shadow-opacity = 0.75;
+# shadow-offset-x = -15;
+# shadow-offset-y = -15;
+
+#################################
+# Opacity
+#################################
+active-opacity = 0.80;
+inactive-opacity = 0.80;
+opacity-rule = [
+    "95:class_g = 'Google-chrome'"
+]
+
+#################################
+# Blur
+#################################
+blur-method = "dual_kawase";
+blur-strength = 5;
+
+#################################
+# Fading
+#################################
+fading = true;
+fade-delta = 3; # The time between steps in a fade in milliseconds. (default 10).
+# fade-out-step = 0.03; # Opacity change between steps while fading out. (default 0.03).
+# Fade windows in/out when opening/closing
+# no-fading-openclose = true;
+fade-exclude = [
+    "class_g = 'Rofi'"
+];
