--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -18,11 +18,12 @@ program = "/bin/zsh"
 # decorations = "None"
 
 [font]
-size = 9.5
+size = 8
 # normal = { family = "JetBrainsMono Nerd Font" }
 # normal = { family = "MesloLGL Nerd Font" }
 # normal = { family = "Ubuntu Mono" }
-normal = { family = "Iosevka Nerd Font" }
+# normal = { family = "Iosevka Nerd Font" }
+normal = { family = "monospace" }
 
 [keyboard]
 bindings = [
