--- a/.config/i3/config
+++ b/.config/i3/config
@@ -4,7 +4,7 @@
 default_border none
 default_floating_border none
 
-gaps inner 10
+gaps inner 5
 
 set $mod Mod4
 font pango:Iosevka Nerd Font 10
@@ -26,7 +26,7 @@ exec --no-startup-id nm-applet
 
 # Xautolock
 exec --no-startup-id xautolock -time 5 -detectsleep -locker "i3lock-fancy"
-
+bindsym $mod+Delete exec --no-startup-id i3lock-fancy
 # Picom
 exec_always --no-startup-id picom
 
