--- a/.config/i3/config
+++ b/.config/i3/config
@@ -31,9 +31,7 @@ bindsym $mod+Delete exec --no-startup-id i3lock-fancy
 exec_always --no-startup-id picom
 
 # wallpaper
-# exec "feh --bg-fill /home/wasabi/Pictures/solarized-dark.png"
-# exec "feh --bg-fill /home/wasabi/Pictures/sousou-no-frieren-1.jpg"
-exec "feh --bg-fill /home/wasabi/Pictures/sousou-no-frieren-2.jpg"
+exec "feh -z --bg-fill /home/wasabi/Pictures/wallpapers/uwu/"
 
 # brightness
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
