picom: blur exclusions

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -32,14 +32,20 @@ shadow-opacity = 0.75;
 active-opacity = 0.80;
 inactive-opacity = 0.80;
 opacity-rule = [
-    "95:class_g = 'Google-chrome'"
+    "95:class_g = 'Google-chrome'",
+    "95:class_g = 'firefox'",
+    "95:class_g = 'Code'"
 ]
 
 #################################
 # Blur
 #################################
 blur-method = "dual_kawase";
-blur-strength = 5;
+blur-strength = 3;
+
+blur-background-exclude = [
+    "class_g = 'slop'"
+];
 
 #################################
 # Fading
