picom: blur & opacity adjustments

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -29,12 +29,12 @@ shadow-opacity = 0.75;
 #################################
 # Opacity
 #################################
-active-opacity = 0.80;
-inactive-opacity = 0.80;
+active-opacity = 0.70;
+inactive-opacity = 0.70;
 opacity-rule = [
-    "95:class_g = 'Google-chrome'",
-    "95:class_g = 'firefox'",
-    "95:class_g = 'Code'"
+    "90:class_g = 'Google-chrome'",
+    "90:class_g = 'firefox'"
+    # "90:class_g = 'Code'"
 ]
 
 #################################
