--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,10 +1,10 @@
 import = [
     # "~/.config/alacritty/themes/themes/gruvbox_dark.toml"
     # "~/.config/alacritty/themes/themes/kanagawa_wave.toml"
-    "~/.config/alacritty/themes/themes/hyper.toml"
+    # "~/.config/alacritty/themes/themes/hyper.toml"
     # "~/.config/alacritty/themes/themes/rose-pine.toml"
     # "~/.config/alacritty/themes/themes/solarized_light.toml"
-    # "~/.config/alacritty/themes/themes/solarized_dark.toml"
+    "~/.config/alacritty/themes/themes/solarized_dark.toml"
     # "~/.config/alacritty/themes/themes/solarized_osaka.toml"
     # "~/.config/alacritty/themes/themes/seashells.toml"
 ]
@@ -19,11 +19,10 @@ program = "/bin/zsh"
 
 [font]
 size = 8
-# normal = { family = "JetBrainsMono Nerd Font" }
+normal = { family = "JetBrainsMono Nerd Font" }
 # normal = { family = "MesloLGL Nerd Font" }
 # normal = { family = "Ubuntu Mono" }
 # normal = { family = "Iosevka Nerd Font" }
-normal = { family = "monospace" }
 
 [keyboard]
 bindings = [
