--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -12,9 +12,10 @@ detect-client-opacity = true;
 #################################
 corner-radius = 8;
 rounded-corners-exclude = [
-  # "class_g = 'Google-chrome'",
-  # "class_g = 'brave'"
-  "class_g = 'i3bar'"
+# "class_g = 'Google-chrome'",
+# "class_g = 'brave'",
+# "class_g = 'i3-frame'",
+"class_g = 'i3bar'"
 ];
 
 #################################
@@ -25,6 +26,9 @@ shadow-radius = 20;
 shadow-opacity = 0.75;
 # shadow-offset-x = -15;
 # shadow-offset-y = -15;
+shadow-exclude = [
+    "class_g = 'i3-frame'"
+]
 
 #################################
 # Opacity
