--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -33,11 +33,12 @@ shadow-exclude = [
 #################################
 # Opacity
 #################################
-active-opacity = 0.70;
-inactive-opacity = 0.70;
+active-opacity = 0.80;
+inactive-opacity = 0.80;
 opacity-rule = [
     "90:class_g = 'Google-chrome'",
-    "90:class_g = 'firefox'"
+    "90:class_g = 'firefox'",
+    "90:class_g = 'discord'"
     # "90:class_g = 'Code'"
 ]
 
