--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -4,9 +4,11 @@ import = [
     # "~/.config/alacritty/themes/themes/hyper.toml"
     # "~/.config/alacritty/themes/themes/rose-pine.toml"
     # "~/.config/alacritty/themes/themes/solarized_light.toml"
-    "~/.config/alacritty/themes/themes/solarized_dark.toml"
+    # "~/.config/alacritty/themes/themes/solarized_dark.toml"
     # "~/.config/alacritty/themes/themes/solarized_osaka.toml"
     # "~/.config/alacritty/themes/themes/seashells.toml"
+    # "~/.config/alacritty/themes/themes/alabaster.toml"
+    # "~/.config/alacritty/themes/themes/alabaster_dark.toml"
 ]
 
 [shell]
