picom: adjust opacity

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -33,20 +33,20 @@ shadow-exclude = [
 #################################
 # Opacity
 #################################
-active-opacity = 0.80;
-inactive-opacity = 0.80;
+active-opacity = 0.85;
+inactive-opacity = 0.85;
 opacity-rule = [
-    "90:class_g = 'Google-chrome'",
-    "90:class_g = 'firefox'",
-    "90:class_g = 'discord'"
+    "100:class_g = 'Google-chrome'",
+    "100:class_g = 'firefox'",
+    "95:class_g = 'discord'"
     # "90:class_g = 'Code'"
 ]
 
 #################################
 # Blur
 #################################
-blur-method = "dual_kawase";
-blur-strength = 3;
+# blur-method = "dual_kawase";
+# blur-strength = 3;
 
 blur-background-exclude = [
     "class_g = 'slop'"
