--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -22,9 +22,10 @@ program = "/bin/zsh"
 [font]
 size = 8
 # normal = { family = "JetBrainsMono Nerd Font" }
-normal = { family = "MesloLGL Nerd Font" }
+# normal = { family = "MesloLGL Nerd Font" }
 # normal = { family = "Ubuntu Mono" }
 # normal = { family = "Iosevka Nerd Font" }
+normal = { family = "FiraCode Nerd Font" }
 
 [keyboard]
 bindings = [
