--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,5 +1,6 @@
 import = [
-    # "~/.config/alacritty/themes/themes/gruvbox_dark.toml"
+    "~/.config/alacritty/themes/themes/gruvbox_dark.toml"
+    # "~/.config/alacritty/themes/themes/gruvbox_light.toml"
     # "~/.config/alacritty/themes/themes/kanagawa_wave.toml"
     # "~/.config/alacritty/themes/themes/hyper.toml"
     # "~/.config/alacritty/themes/themes/rose-pine.toml"
@@ -15,12 +16,12 @@ import = [
 program = "/bin/zsh"
 
 [window]
-# opacity = 0.98
+opacity = 0.98
 # padding = { x = 5, y = 5 }
 # decorations = "None"
 
 [font]
-size = 8
+size = 9
 # normal = { family = "JetBrainsMono Nerd Font" }
 # normal = { family = "MesloLGL Nerd Font" }
 # normal = { family = "Ubuntu Mono" }
