--- a/.config/i3/config
+++ b/.config/i3/config
@@ -18,21 +18,22 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-# exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
 # Xautolock
-exec --no-startup-id xautolock -time 5 -detectsleep -locker "i3lock-fancy"
-bindsym $mod+Delete exec --no-startup-id i3lock-fancy
+# exec --no-startup-id xautolock -time 5 -detectsleep -locker "i3lock-fancy"
+# bindsym $mod+Delete exec --no-startup-id i3lock-fancy
+
 # Picom
-exec_always --no-startup-id picom
+exec_always --no-startup-id sleep 5 && picom -b
 
 # wallpaper
 # exec "feh -z --bg-fill /home/wasabi/Pictures/wallpapers/uwu/"
-exec_always "feh --bg-fill /home/wasabi/Pictures/wallpapers/kanagawa.jpg"
+exec_always "feh --bg-fill /home/wasabi/Pictures/wallpapers/black-w-lines.jpg"
 
 # keyboard layout
 exec_always "setxkbmap -layout us,latam"
