--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -38,6 +38,7 @@ inactive-opacity = 0.85;
 opacity-rule = [
     "100:class_g = 'Google-chrome'",
     "100:class_g = 'firefox'",
+    "100:class_g = 'Brave-browser'",
     "95:class_g = 'discord'"
     # "90:class_g = 'Code'"
 ]
@@ -45,8 +46,8 @@ opacity-rule = [
 #################################
 # Blur
 #################################
-# blur-method = "dual_kawase";
-# blur-strength = 3;
+blur-method = "dual_kawase";
+blur-strength = 3;
 
 blur-background-exclude = [
     "class_g = 'slop'"
