--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,20 @@
+# Reload config
+bind-key r run-shell "tmux source-file ~/.tmux.conf && echo reloaded"
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
 
 # Enable mouse
 set -g mouse on 
+
+# vim-like pane switching
+bind -r ^ last-window
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
+
+# Sessionizer
+# bind -r b run "~/scripts/tmux-sessionizer.sh > /dev/null"
+bind-key -r f run-shell "tmux neww ~/scripts/tmux-sessionizer.sh"
