picom: ugly background in menus

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -2,9 +2,6 @@ backend = "glx";
 vsync = true;
 glx-copy-from-front = false;
 glx-use-copysubbuffer-mesa = true;
-# glx-swap-method = 2;
-# xrender-sync = true;
-# xrender-sync-fence = true;
 detect-client-opacity = true;
 
 #################################
@@ -12,10 +9,7 @@ detect-client-opacity = true;
 #################################
 corner-radius = 8;
 rounded-corners-exclude = [
-# "class_g = 'Google-chrome'",
-# "class_g = 'brave'",
-# "class_g = 'i3-frame'",
-"class_g = 'i3bar'"
+    "class_g = 'i3bar'"
 ];
 
 #################################
@@ -40,15 +34,12 @@ opacity-rule = [
     "100:class_g = 'firefox'",
     "100:class_g = 'Brave-browser'",
     "95:class_g = 'discord'"
-    # "90:class_g = 'Code'"
 ]
 
 #################################
 # Blur
 #################################
 blur-method = "dual_kawase";
-blur-strength = 3;
-
 blur-background-exclude = [
     "class_g = 'slop'"
 ];
@@ -64,3 +55,8 @@ fade-delta = 3; # The time between steps in a fade in milliseconds. (default 10)
 fade-exclude = [
     "class_g = 'Rofi'"
 ];
+
+wintypes:
+{
+  menu = { shadow = false; blur-background = false;}
+};
