picom: opacity stuff

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -27,8 +27,8 @@ shadow-exclude = [
 #################################
 # Opacity
 #################################
-active-opacity = 0.75;
-inactive-opacity = 0.75;
+active-opacity = 0.85;
+inactive-opacity = 0.85;
 opacity-rule = [
     "100:class_g = 'Google-chrome'",
     "100:class_g = 'firefox'",
@@ -41,7 +41,8 @@ opacity-rule = [
 #################################
 blur-method = "dual_kawase";
 blur-background-exclude = [
-    "class_g = 'slop'"
+    "class_g = 'slop'",
+    "class_g = 'Peek'"
 ];
 
 #################################
