--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -18,3 +18,5 @@ bind -r l select-pane -R
 # Sessionizer
 # bind -r b run "~/scripts/tmux-sessionizer.sh > /dev/null"
 bind-key -r f run-shell "tmux neww ~/scripts/tmux-sessionizer.sh"
+
+source ~/.config/tmux/status.conf
