tmux: remove status

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -19,4 +19,4 @@ bind -r l select-pane -R
 # bind -r b run "~/scripts/tmux-sessionizer.sh > /dev/null"
 bind-key -r f run-shell "tmux neww ~/scripts/tmux-sessionizer.sh"
 
-source ~/.config/tmux/status.conf
+# source ~/.config/tmux/status.conf
