picom: rm alacritty opacity

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -33,6 +33,7 @@ opacity-rule = [
     "100:class_g = 'Google-chrome'",
     "100:class_g = 'firefox'",
     "100:class_g = 'Brave-browser'",
+    "100:class_g = 'Alacritty'",
     "95:class_g = 'discord'"
 ]
 
