--- a/.config/sway/config
+++ b/.config/sway/config
@@ -3,9 +3,9 @@ default_floating_border none
 titlebar_padding 1
 titlebar_border_thickness 0
 
-gaps inner 8
+gaps inner 2
 
-font pango:Iosevka Nerd Font regular 10
+font pango:JetBrainsMono Nerd Font 10
 
 # Logo key. Use Mod1 for Alt.
 set $mod Mod4
@@ -19,10 +19,11 @@ set $menu wofi --show drun
 # set $menu dmenu_path | wmenu | xargs swaymsg exec --
 
 include /etc/sway/config-vars.d/*
+include /etc/sway/config.d/*
 
 ### Output configuration
 # You can get the names of your outputs by running: swaymsg -t get_outputs
-output * bg /home/wasabi/Pictures/solarized-dark.png fill
+output * bg /home/wasabi/Pictures/wallpapers/black-w-lines.jpg fill
 output HDMI-A-1 mode 2560x1440@100hz
 #
 # Example configuration:
@@ -49,7 +50,7 @@ output HDMI-A-1 mode 2560x1440@100hz
 # Read `man 5 sway-input` for more information about this section.
 
     input type:keyboard {
-        xkb_layout us,es
+        xkb_layout es,us
         xkb_options grp:win_space_toggle
     }
 
@@ -60,6 +61,8 @@ output HDMI-A-1 mode 2560x1440@100hz
     }
 
 ### Key bindings
+    bindsym $mod+m move workspace to output right
+    bindsym $mod+Shift+m move workspace to output left
 
     bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
     bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
@@ -69,7 +72,7 @@ output HDMI-A-1 mode 2560x1440@100hz
     bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
 
     # Start a terminal
-    bindsym $mod+Return exec $term
+    bindsym $mod+Return exec env -u WAYLAND_DISPLAY $term
 
     # Kill focused window
     bindsym $mod+Shift+q kill
