--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -6,6 +6,7 @@ program = "/bin/zsh"
 [window]
 # opacity = 0.90
 padding = { x = 0, y = 0 }
+dynamic_padding = true
 # decorations = "None"
 
 [font]
