--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -9,17 +9,16 @@ detect-client-opacity = true;
 #################################
 corner-radius = 8;
 rounded-corners-exclude = [
-    "class_g = 'i3bar'"
+    "class_g = 'i3bar'",
+    "class_g = 'polybar'"
 ];
 
 #################################
 # Shadows
 #################################
-shadow = true;
+shadow = false;
 shadow-radius = 20;
 shadow-opacity = 0.75;
-# shadow-offset-x = -15;
-# shadow-offset-y = -15;
 shadow-exclude = [
     "class_g = 'i3-frame'"
 ]
@@ -50,7 +49,7 @@ blur-background-exclude = [
 # Fading
 #################################
 fading = true;
-fade-delta = 3; # The time between steps in a fade in milliseconds. (default 10).
+fade-delta = 1.5; # The time between steps in a fade in milliseconds. (default 10).
 # fade-out-step = 0.03; # Opacity change between steps while fading out. (default 0.03).
 # Fade windows in/out when opening/closing
 # no-fading-openclose = true;
