--- a/.config/i3/config
+++ b/.config/i3/config
@@ -4,10 +4,10 @@
 default_border none
 default_floating_border none
 
-gaps inner 5
+gaps inner 2
 
 set $mod Mod4
-font pango:FiraCode Nerd Font 9
+font pango:UbuntuMono Nerd Font 9
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -31,9 +31,12 @@ exec --no-startup-id nm-applet
 # Picom
 exec_always --no-startup-id sleep 5 && picom -b
 
+# Polybar
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+
 # wallpaper
 # exec "feh -z --bg-fill /home/wasabi/Pictures/wallpapers/uwu/"
-exec_always "feh --bg-fill /home/wasabi/Pictures/wallpapers/uwu/vagabond-3.jpg"
+exec_always "feh --bg-fill /home/wasabi/Pictures/wallpapers/black_unity_22_wallpaper_ipad.png"
 
 # keyboard layout
 exec_always "setxkbmap -layout us,latam"
@@ -238,6 +241,6 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-}
+# bar {
+#         status_command i3status
+# }
