--- a/.config/i3/config
+++ b/.config/i3/config
@@ -7,7 +7,7 @@ default_floating_border none
 gaps inner 2
 
 set $mod Mod4
-font pango:UbuntuMono Nerd Font 9
+font pango:SF Mono 9
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -32,11 +32,10 @@ exec --no-startup-id nm-applet
 exec_always --no-startup-id sleep 5 && picom -b
 
 # Polybar
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+# exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # wallpaper
-# exec "feh -z --bg-fill /home/wasabi/Pictures/wallpapers/uwu/"
-exec_always "feh --bg-fill /home/wasabi/Pictures/wallpapers/black_unity_22_wallpaper_ipad.png"
+exec_always "feh --bg-fill /home/wasabi/Pictures/wallpapers/black-w-lines.jpg"
 
 # keyboard layout
 exec_always "setxkbmap -layout us,latam"
@@ -241,6 +240,6 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-# bar {
-#         status_command i3status
-# }
+bar {
+        status_command i3status
+}
