--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -12,10 +12,10 @@ general {
 }
 
 # order += "ipv6"
-# order += "ethernet _first_"
 # order += "disk /"
 # order += "load"
 order += "wireless _first_"
+order += "ethernet _first_"
 order += "volume master"
 order += "battery all"
 order += "memory"
@@ -23,24 +23,25 @@ order += "cpu_usage"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "W: %quality at %essid"
-        format_down = "W: down"
+        # format_up = "W: %quality at %essid"
+        format_up = " %quality %essid"
+        format_down = "  down"
 }
 
 ethernet _first_ {
         format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+        format_down = " down"
 }
 
 battery all {
     format = "%status: %percentage %remaining"
-        format_down = "No battery"
-        status_chr = "CHR"
-        status_bat = "BAT"
-        status_unk = "? UNK"
-        status_full = "FULL"
-        path = "/sys/class/power_supply/BAT%d/uevent"
-        low_threshold = 10
+    format_down = "No battery"
+    status_chr = "CHR"
+    status_bat = "BAT"
+    status_unk = "? UNK"
+    status_full = "FULL"
+    path = "/sys/class/power_supply/BAT%d/uevent"
+    low_threshold = 30
 }
 
 disk "/" {
@@ -52,13 +53,13 @@ load {
 }
 
 memory {
-        format = "MEM: %percentage_used"
+        format = "󰍛 %percentage_used"
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
 }
 
 cpu_usage {
-        format = "CPU: %usage"
+        format = "  %usage"
 }
 
 tztime local {
@@ -67,5 +68,5 @@ tztime local {
 }
 
 volume master {
-    format = "VOL: %volume"
+    format = " %volume"
 }
