--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -16,7 +16,7 @@ rounded-corners-exclude = [
 #################################
 # Shadows
 #################################
-shadow = false;
+shadow = true;
 shadow-radius = 20;
 shadow-opacity = 0.75;
 shadow-exclude = [
@@ -32,19 +32,20 @@ opacity-rule = [
     "100:class_g = 'Google-chrome'",
     "100:class_g = 'firefox'",
     "100:class_g = 'Brave-browser'",
-    "100:class_g = 'Alacritty'",
     "100:class_g = 'Code'",
-    "95:class_g = 'discord'"
+    "100:class_g = 'discord'",
+    "85:class_g = 'Alacritty'"
 ]
 
 #################################
 # Blur
 #################################
-blur-method = "dual_kawase";
-blur-background-exclude = [
-    "class_g = 'slop'",
-    "class_g = 'Peek'"
-];
+# blur-enabled = false;
+# blur-method = "dual_kawase";
+# blur-background-exclude = [
+#     "class_g = 'slop'",
+#     "class_g = 'Peek'"
+# ];
 
 #################################
 # Fading
