--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -11,16 +11,18 @@ dynamic_padding = true
 
 [font]
 # offset = { x = 0 , y = 10 }
-size = 9
+# size = 11
 # normal = { family = "JetBrainsMono Nerd Font" }
-# normal = { family = "MesloLGL Nerd Font" }
-# normal = { family = "UbuntuMono Nerd Font" }
+# # normal = { family = "MesloLGL Nerd Font" }
+normal = { family = "UbuntuMono Nerd Font" }
 # normal = { family = "Iosevka Nerd Font" }
 # normal = { family = "FiraCode Nerd Font" }
 # normal = { family = "RobotoMono Nerd Font" }
 # normal = { family = "Liberation Mono" }
 # normal = { family = "DankMono Nerd Font" }
-normal = { family = "SFMono Nerd Font" }
+# normal = { family = "SFMono Nerd Font" }
+# normal = { family = "Monaco Nerd Font Mono" }
+# normal = { family = "Inconsolata Nerd Font Mono" }
 
 [keyboard]
 bindings = [
