--- a/.config/i3/config
+++ b/.config/i3/config
@@ -7,7 +7,7 @@ default_floating_border none
 gaps inner 2
 
 set $mod Mod4
-font pango:SF Mono 9
+font pango:FiraCode Nerd Font 9
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -35,7 +35,7 @@ exec_always --no-startup-id sleep 5 && picom -b
 # exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # wallpaper
-exec_always "feh --bg-fill /home/wasabi/Pictures/wallpapers/black-w-lines.jpg"
+exec_always "feh --bg-fill /home/wasabi/Pictures/wallpapers/space/CEERS11.jpg"
 
 # keyboard layout
 exec_always "setxkbmap -layout us,latam"
