--- a/.config/i3/config
+++ b/.config/i3/config
@@ -7,7 +7,7 @@ default_floating_border none
 gaps inner 2
 
 set $mod Mod4
-font pango:FiraCode Nerd Font 9
+font pango:SFMono Nerd Font 9
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -29,17 +29,18 @@ exec --no-startup-id nm-applet
 # bindsym $mod+Delete exec --no-startup-id i3lock-fancy
 
 # Picom
-exec_always --no-startup-id sleep 5 && picom -b
+# exec_always --no-startup-id sleep 5 && picom -b
 
 # Polybar
 # exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
+exec_always --no-startup-id --no-startup-id /usr/lib/gsd-xsettings
+
 # wallpaper
-exec_always "feh --bg-fill /home/wasabi/Pictures/wallpapers/space/CEERS11.jpg"
+# exec_always "feh --bg-fill /home/wasabi/Pictures/wallpapers/space/CEERS11.jpg"
 
 # keyboard layout
-exec_always "setxkbmap -layout us,latam"
-exec_always "setxkbmap -option 'grp:win_space_toggle'"
+exec_always "setxkbmap -layout us,latam -option 'grp:win_space_toggle' -option caps:escape"
 
 # brightness
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
@@ -71,7 +72,7 @@ tiling_drag modifier titlebar
 
 # start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec ghostty
 
 # kill focused window
 bindsym $mod+Shift+q kill
