--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -26,26 +26,25 @@ shadow-exclude = [
 #################################
 # Opacity
 #################################
-active-opacity = 0.85;
-inactive-opacity = 0.85;
+active-opacity = 0.95;
+inactive-opacity = 0.95;
 opacity-rule = [
     "100:class_g = 'Google-chrome'",
     "100:class_g = 'firefox'",
     "100:class_g = 'Brave-browser'",
     "100:class_g = 'Code'",
-    "100:class_g = 'discord'",
-    "85:class_g = 'Alacritty'"
+    "100:class_g = 'discord'"
 ]
 
 #################################
 # Blur
 #################################
-# blur-enabled = false;
-# blur-method = "dual_kawase";
-# blur-background-exclude = [
-#     "class_g = 'slop'",
-#     "class_g = 'Peek'"
-# ];
+blur-enabled = false;
+blur-method = "dual_kawase";
+blur-background-exclude = [
+    "class_g = 'slop'",
+    "class_g = 'Peek'"
+];
 
 #################################
 # Fading
