--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,13 @@
 # Reload config
-bind-key r run-shell "tmux source-file ~/.tmux.conf && echo reloaded"
+bind-key r run-shell "tmux source-file /home/wasabi/.config/tmux/tmux.conf && echo reloaded"
+
+set -g default-terminal "tmux-256color"
+set -as terminal-overrides ",gnome*:Tc"
+set -as terminal-overrides ",alacritty:Tc"
+
+# set-option -ga terminal-overrides "alacritty:Tc"
+# set -as terminal-features ",gnome*:RGB"
+# set-option -sa terminal-overrides ',alacritty:RGB'
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
