--- a/.config/sway/config
+++ b/.config/sway/config
@@ -5,7 +5,7 @@ titlebar_border_thickness 0
 
 gaps inner 2
 
-font pango:SFMono Nerd Font 10
+font pango:Iosevka Nerd Font 10
 
 # Logo key. Use Mod1 for Alt.
 set $mod Mod4
@@ -43,16 +43,10 @@ output HDMI-A-1 mode 2560x1440@100hz
 # Run: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
 
-# exec_always "setxkbmap -layout us -option 'grp:win_space_toggle' -option caps:escape"
-
-# input type:keyboard xkb_layout "latam,us"
-# input type:keyboard xkb_options "grp:alt_shift_toggle"
-# input type:keyboard xkb_options "caps:escape"
-
 input type:keyboard {
-        xkb_layout us,latam
+    xkb_layout "latam,us"
+    xkb_options "caps:escape, grp:win_space_toggle"
 }
-bindsym $mod+Control input type:keyboard xkb_switch_layout next
 
 input "1267:12448:ELAN0708:00_04F3:30A0_Touchpad" {
     dwt enabled
@@ -60,16 +54,19 @@ input "1267:12448:ELAN0708:00_04F3:30A0_Touchpad" {
     natural_scroll enabled
 }
 
+seat seat0 xcursor_theme macOS
+
 ### Key bindings
 bindsym $mod+m move workspace to output right
 bindsym $mod+Shift+m move workspace to output left
+bindsym $mod+T exec --no-startup-id "~/dotfiles/scripts/toggle-gtk-colorscheme.sh"
 
 # capture all screens to clipboard    
 # bindsym Ctrl+Print exec grim - | wl-copy    
 # capture the specified screen area to clipboard    
-bindsym Control+Shift+S exec grim -g "$(slurp)" - | wl-copy
+bindsym Control+Shift+Print exec grim -g "$(slurp)" - | wl-copy
 # capture the focused monitor to clipboard    
-bindsym Control+Control+Print exec grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name') - | wl-copy
+bindsym Control+Print exec grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name') - | wl-copy
 
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
@@ -217,20 +214,17 @@ bindsym $mod+r mode "resize"
 #
 # Read `man 5 sway-bar` for more information about this section.
 bar {
-    position bottom
-    # When the status_command prints a new line to stdout, swaybar updates.
-    # The default just shows the current date and time.
-    # status_command while date +'%Y-%m-%d %X'; do sleep 1; done
-    status_command /home/wasabi/.config/sway/status_bar.sh
-    colors {
-        statusline #ffffff
-        background #00000070
-        separator #FFFFFF
-        focused_workspace #FE8019 #D65D0E #EBDBB2
-        inactive_workspace #00000070 #00000070 #EBDBB2
-        urgent_workspace #fb4934 #cc241d #EBDBB2
-    }
-    # swaybar_command waybar
+    # position bottom
+    # status_command /home/wasabi/.config/sway/status_bar.sh
+    # colors {
+    #     statusline #ffffff
+    #     background #00000070
+    #     separator #FFFFFF
+    #     focused_workspace #FE8019 #D65D0E #EBDBB2
+    #     inactive_workspace #00000070 #00000070 #EBDBB2
+    #     urgent_workspace #fb4934 #cc241d #EBDBB2
+    # }
+    swaybar_command waybar
 }
 
 include /etc/sway/config.d/*
