--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -28,3 +28,7 @@ bind -r l select-pane -R
 bind-key -r f run-shell "tmux neww ~/scripts/tmux-sessionizer.sh"
 
 # source ~/.config/tmux/status.conf
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+run '~/.tmux/plugins/tpm/tpm'
