updates from pioneer

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # Reload config
-bind-key r run-shell "tmux source-file /home/wasabi/.config/tmux/tmux.conf && echo reloaded"
+bind-key r run-shell "tmux source-file ~/.config/tmux/tmux.conf && echo reloaded"
 
 set -g default-terminal "tmux-256color"
 set -as terminal-overrides ",gnome*:Tc"
@@ -24,11 +24,13 @@ bind -r h select-pane -L
 bind -r l select-pane -R
 
 # Sessionizer
-# bind -r b run "~/scripts/tmux-sessionizer.sh > /dev/null"
-bind-key -r f run-shell "tmux neww ~/scripts/tmux-sessionizer.sh"
+bind-key -r f run-shell "tmux neww ~/Dev/dotfiles/scripts/tmux-sessionizer.sh"
 
-# source ~/.config/tmux/status.conf
+# Lazygit
+bind-key -r g run-shell "tmux neww lazygit"
 
-set -g @plugin 'tmux-plugins/tmux-resurrect'
+source ~/.config/tmux/status-neutral.conf
 
-run '~/.tmux/plugins/tpm/tpm'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# run '~/.tmux/plugins/tpm/tpm'
