--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -2,20 +2,17 @@
 # theme=light:GruvboxLightHard,dark:GruvboxDarkHard
 # theme=light:catppuccin-latte,dark:catppuccin-mocha
 # theme=light:iTerm2 Solarized Light,dark:iTerm2 Solarized Dark
-# theme=light:Builtin Tango Light,dark:HaX0R_GR33N  
+# theme=light:iTerm2 Light Background,dark:iTerm2 Default
+theme=iTerm2 Default
+# theme=light:Builtin Tango Light,dark:HaX0R_GR33N
 # theme=light:Builtin Tango Light,dark:Builtin Tango Dark
-theme=light:Github,dark:GitHub Dark
+# theme=light:Github,dark:GitHub Dark
 
-# font-family=FiraCode Nerd Font Mono
 # font-family=Iosevka Nerd Font Mono
-font-family= SFMono Nerd Font
-# font-family=UbuntuMono Nerd Font
-# font-family=RobotoMono Nerd Font
-# font-family=MesloLGL Nerd Font
-# font-family=Monaco Nerd Font Mono
-# font-family=Inconsolata Nerd Font Mono
-# font-family=Hack Nerd Font
-font-size=10
+# font-family=Monaco
+# font-family=SF Mono
+# font-family=Menlo
+font-family=GeistMono Nerd Font
 
 cursor-style=block
 cursor-style-blink=false
@@ -24,5 +21,9 @@ gtk-adwaita=true
 gtk-titlebar=false
 adw-toolbar-style=flat
 window-theme=ghostty
-window-padding-x=1
-window-padding-y=1
+window-padding-x=3
+window-padding-y=2
+# window-width=150
+# window-height=50
+
+confirm-close-surface=false
