--- a/.config/tmux/status.conf
+++ b/.config/tmux/status.conf
@@ -1,31 +1,25 @@
-# vim: ft=tmux
-set -g mode-style "fg=#eee8d5,bg=#073642"
+# color the pane borders nearly invisible
+# (when not using hacked tmux without them)
+set -g pane-border-style "fg=#171717"
+set -g pane-active-border-style "fg=#171717"
 
-set -g message-style "fg=#eee8d5,bg=#073642"
-set -g message-command-style "fg=#eee8d5,bg=#073642"
-
-set -g pane-border-style "fg=#073642"
-set -g pane-active-border-style "fg=#eee8d5"
-
-set -g status "on"
+set -g status-style "fg=#d5c4a1"
+set -g status-bg default
+set -g status-position bottom
 set -g status-interval 1
-set -g status-justify "left"
 
-set -g status-style "fg=#586e75,bg=#073642"
+set -g status-left "#(basename $(tmux display-message -p -F '#{pane_current_path}')) "
+set -g status-left-style "fg=#d65d0e "
 
-set -g status-bg "#002b36"
+set -g status-right "#[fg=#fabd2f]#(whoami) #[fg=default]%a, %b %-e, %Y, %-l:%M:%S%p"
+set -g status-right-length 50
 
-set -g status-left-length "100"
-set -g status-right-length "100"
+set -g window-status-format "#I:#W"
+set -g window-status-current-format "#[fg=#fbf1c7,bold]#I:#W"
 
-set -g status-left-style NONE
-set -g status-right-style NONE
+set -g message-style "fg=#cc241d"
 
-set -g status-left "#[fg=#073642,bg=#eee8d5,bold] #S #[fg=#eee8d5,bg=#93a1a1,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#93a1a1,bold] #(whoami) #[fg=#93a1a1,bg=#002b36]"
-set -g status-right "#[fg=#586e75,bg=#002b36,nobold,nounderscore,noitalics]#[fg=#93a1a1,bg=#586e75]#[fg=#657b83,bg=#586e75,nobold,nounderscore,noitalics]#[fg=#93a1a1,bg=#657b83]#[fg=#93a1a1,bg=#657b83,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#93a1a1,bold] #h "
+set -g status on
 
-setw -g window-status-activity-style "underscore,fg=#839496,bg=#002b36"
-setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#839496,bg=#002b36"
-setw -g window-status-format '#[fg=#002b36,bg=#002b36]#[default] #I  #{b:pane_current_path} #[fg=#002b36,bg=#002b36,nobold,nounderscore,noitalics]'
-setw -g window-status-current-format '#[fg=#002b36,bg=#eee8d5]#[fg=#b58900,bg=#eee8d5] #I #[fg=#eee8d5,bg=#b58900] #{b:pane_current_path} #[fg=#b58900,bg=#002b36,nobold]'
+# better window names
+set -g automatic-rename
