updates from pioneer

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -2,17 +2,19 @@
 # theme=light:GruvboxLightHard,dark:GruvboxDarkHard
 # theme=light:catppuccin-latte,dark:catppuccin-mocha
 # theme=light:iTerm2 Solarized Light,dark:iTerm2 Solarized Dark
+# theme=iTerm2 Solarized Dark
 # theme=light:iTerm2 Light Background,dark:iTerm2 Default
 theme=iTerm2 Default
 # theme=light:Builtin Tango Light,dark:HaX0R_GR33N
 # theme=light:Builtin Tango Light,dark:Builtin Tango Dark
 # theme=light:Github,dark:GitHub Dark
 
-# font-family=Iosevka Nerd Font Mono
+font-family=Iosevka Nerd Font Mono
 # font-family=Monaco
 # font-family=SF Mono
 # font-family=Menlo
-font-family=GeistMono Nerd Font
+# font-family=GeistMono Nerd Font
+# font-family=DankMono Nerd Font
 
 cursor-style=block
 cursor-style-blink=false
@@ -23,7 +25,7 @@ adw-toolbar-style=flat
 window-theme=ghostty
 window-padding-x=3
 window-padding-y=2
-# window-width=150
-# window-height=50
+window-width=150
+window-height=50
 
 confirm-close-surface=false
