--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -16,6 +16,12 @@ setw -g pane-base-index 1
 # Enable mouse
 set -g mouse on 
 
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "pbcopy" # copy from tmux to macos system
+# bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "wl-copy" # copy from tmux to linux wayland system
+
 # vim-like pane switching
 bind -r ^ last-window
 bind -r k select-pane -U
@@ -27,7 +33,7 @@ bind -r l select-pane -R
 bind-key -r f run-shell "tmux neww ~/Dev/dotfiles/scripts/tmux-sessionizer.sh"
 
 # Lazygit
-bind-key -r g run-shell "tmux neww lazygit"
+# bind-key -r g run-shell "tmux neww lazygit"
 
 source ~/.config/tmux/status-neutral.conf
 
