updates from pioneer

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,14 +1,17 @@
 # theme=TokyoNight
 # theme=Rose Pine
-# theme=Gruvbox Dark Soft
-# theme=Catppuccin Mocha
+# theme=Gruvbox Dark Hard
+theme=Catppuccin Mocha
 # theme=light:iTerm2 Solarized Light,dark:iTerm2 Solarized Dark
 # theme=iTerm2 Solarized Dark
 # theme=light:iTerm2 Light Background,dark:iTerm2 Default
 # theme=iTerm2 Default
 # theme=light:Builtin Tango Light,dark:Builtin Tango Dark
 # theme=light:Github,dark:GitHub Dark
-theme=Kanagawa Dragon
+# theme=Kanagawa Dragon
+# theme=iTerm2 Default
+
+# font-family=Fira Code Nerd Font Mono
 
 # font-family=ZedMono Nerd Font Mono
 
@@ -16,7 +19,7 @@ theme=Kanagawa Dragon
 
 # font-family=Monaco
 
-# font-family=SF Mono
+font-family=SF Mono
 
 # font-family=Menlo
 
@@ -26,18 +29,18 @@ theme=Kanagawa Dragon
 
 # font-family=Google Sans Code
 
-font-family=Ioskeley Mono
+# font-family=Ioskeley Mono
 
 # font-family=UbuntuMono Nerd Font Mono
 # font-size=16
 
-adjust-cell-height=10%
+# adjust-cell-height=10%
 
 cursor-style=block
 cursor-style-blink=false
 
-# background-opacity=0.9
-# background-blur=50
+# background-opacity=0.95
+# background-blur=20
 
 # gtk-adwaita=true
 # gtk-titlebar=false
@@ -49,3 +52,5 @@ cursor-style-blink=false
 # window-height=50
 
 confirm-close-surface=false
+
+keybind = super+t=ignore
